--- a/frontend/app.json
+++ b/frontend/app.json
@@ -25,7 +25,13 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.example.hackthevalley4",
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "com.example.hackthevalley4",
+      "versionCode": 1
     }
   }
 }
