--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/geolocation": "^2.0.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-geocoding": "^0.4.0",
     "react-native-maps": "0.26.1",
     "react-native-permissions": "^2.0.9",
     "react-native-snap-carousel": "^3.8.4"
