--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
     "react-native-geocoding": "^0.4.0",
     "react-native-maps": "0.26.1",
     "react-native-permissions": "^2.0.9",
-    "react-native-snap-carousel": "^3.8.4"
+    "react-native-snap-carousel": "^3.8.4",
+    "react-native-multiple-select": "^0.5.5",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
